  * Refactor to provide unix IPC::Run support where there is no IO::Pty
  * Add opts support to Serial Transport
  * Fix phrasebook loading to use all library and add_library paths
  * Support out of order entries in phrasebooks (macro/prompt refs)
  * New phrasebook for Bash shell
  * Improve documentation on how to create new phrasebooks

2.122630  2012-09-19 17:21:30 Europe/London

  * Port from Moose to Moo

1.122530  2012-09-09 15:52:07 Europe/London

  * Alter log messages so that notice is a more useful default
  * Delete SIGCHLD after close (rt.cpan#79450)

1.122100  2012-07-29 00:33:51 Europe/London

1.122020_002 2012-07-20 15:56:04 Europe/London

  * change docs for wake_up to formalise integer
  * Add macros for paging for HP (C. Tucker)

1.122010  2012-07-19 20:52:28 Europe/London

1.121990_002 2012-07-17 23:25:28 Europe/London

  * Add Port number and generic Opts support to Telnet transport.

1.121640  2012-06-12 23:22:19 Europe/London

  * NCI library version number is logged at instatiation.
  * New ignore_host_checks option for SSH to replace shkc. Note the following:

  This option defaults to ENABLED meaning that openssh no longer checks host IDs.
  See documentation in Net::CLI::Interact::Transport::SSH for details.

1.121570  2012-06-05 19:37:11 Europe/London

  * Fix Cisco prompt detection when containing [] characters (Alexander Hartmaier)
  * Detect connection failures and die with buffered transport error

1.120670  2012-03-07 20:20:06 Europe/London

  * Fix IO::Pty dependency only to appear on non-Win32. This has required a
    local hack to Dist::Zilla so please contact the author if you build from dist.ini.

1.120560  2012-02-25 16:52:07 Europe/London

  * fix typo (C. Vicente)
  * fix Win32 path to locate plink.exe

1.120042  2012-01-04 21:08:07 Europe/London

  * test release process

1.120040  2012-01-04 20:58:57 Europe/London

  * ors attribute should be writeable (V. Magnin)

1.113610  2011-12-27 00:51:35 Europe/London
