@@ -7,6 +7,7 @@
   * Support out of order entries in phrasebooks (macro/prompt refs)
   * New phrasebook for Bash shell
   * Improve documentation on how to create new phrasebooks
+  * Smarter log message for output matching prompt
 
 2.122630  2012-09-19 17:21:30 Europe/London
 
